# CS4410

snake/a03-boa/: Makefile  compile.ml  dune  dune-project  exprs.ml  main.ml  pretty.ml  runner.ml  test.ml
snake/a03-boa/input/: fail10.boa  test11.boa  test12.boa  test3.boa  test5.boa  test7.boa  test8.boa  test9.boa
snake/a08-fer-de-lance/: Makefile  compile.ml  desugar.ml  dune  environment.ml  exprs.ml  main.c  main.ml  parser.mly  phases.ml  pretty.ml  runner.ml  test.ml  utils.ml  wellformed.ml
snake/a08-fer-de-lance/input/: st4_ocsh_padded.fdl  st5_unused_stack.fdl
snake/a08-fer-de-lance/input/do_err/: dup_decls_diff_arity.err  dup_letrec.err  error_inside_app_args.err  func_arity_mismatch.err  if_as_expr_unbound.fdl  let_shadow_func.fdl  logic_got_num_1.err  multiple_unbound_ids.err  neg_static_overflow.err  nested_ifs_unbound_id.err  nested_lets_unbound_id.err  nil_accessor.err  not_letrec.err  one_duplicate_id_2.fdl  runtime_bind_tuple_too_short.fdl  runtime_func_bind.err  runtime_func_bind_tuple_too_long.fdl  tuple_get_not_tuple.err  tuple_get_not_tuple.fdl  tuple_set_nil.fdl  tuple_set_not_num.err  tuple_set_not_num.fdl  tuple_set_not_tuple.err  var_not_func.err
snake/a08-fer-de-lance/input/do_pass/: basic_tuples.out  cry_sob_scream.fdl  fancy_bindings.fdl  func_global_increment.out  func_zero_args.fdl  func_zero_args.out  lamb_diff_fv.out  let_booleans_1.fdl  let_booleans_2.fdl  let_if_arith.fdl  let_shadow_func.fdl  logic_or_complicated_rhs_0.fdl  nested_let_arith.fdl  print_function.out  print_tuples.fdl  structural_equals.out
snake/a09-garter/: .ocamlformat  Makefile  assembly.ml  compile.ml  dune  dune-project  environment.ml  lexer.mll  main.ml  parser.mly  phases.ml  runner.ml  test.ml  utils.ml  wellformed.ml
snake/a09-garter/input/: basic_def.garter
snake/a09-garter/input/do_err/: func_binding_arg_dup.err  func_binding_arg_dup.garter  func_dup_args.err  func_dup_args.garter  gc_oom_after_gc_attempt.err  gc_oom_after_gc_attempt.garter  gc_too_much_in_free_vars.err  gc_too_much_in_free_vars.options  parse_error_2.err  runtime_bind_tuple_too_long.garter  runtime_func_bind.garter  tuple_get_not_num.err  tuple_get_not_num.garter  tuple_set_nil.err  unbound_func.garter  var_not_func.err  var_not_func.garter
snake/a09-garter/input/do_pass/: basic_functions.garter  basic_let_arith.garter  cyclic_tuples.garter  fancy_func_bindings.garter  func_mutual_rec_many.garter  func_odd_even.garter  func_return_tuple.garter  func_scoping.garter  gc_after_gc_exact_amount.garter  gc_after_gc_exact_amount.options  gc_and_tail_needed_to_pass.options  gc_func_let_garbage.garter  gc_func_let_garbage.options  gc_func_seq_garbage.garter  gc_func_seq_garbage.options  gc_lambda_fv_1.garter  gc_lambda_fv_1.options  gc_no_builtin_no_mem.options  given_pair_test2.garter  given_pair_test2.out  given_pair_test3.out  lamb_diff_fv.garter  lamb_msg_pass_tuple.out  lamb_mutual_rec.garter  lamb_two_use_same_tuple.garter  lamb_two_use_same_tuple.options  logic_and_complicated_rhs_0.garter  match_func_tuple_binding.options  match_tuple_binding.garter  (+3 more)
snake/a09-garter/runtime/: decl.h  gc.c  main.c  snakeval.c
snake/a10-racer/: Makefile  anf.ml  assembly.ml  compile.ml  dce.ml  desugar.ml  dune  dune-project  environment.ml  errors.ml  exprs.ml  graph.ml  phases.ml  regalloc.ml  runner.ml  test.ml  utils.ml  wellformed.ml
snake/a10-racer/runtime/: snakeval.h
snake/a12-final-project/: .gitignore  Makefile  README.md  anf.ml  assembly.ml  compile.ml  dce.ml  desugar.ml  dune  dune-project  environment.ml  errors.ml  exprs.ml  lexer.mll  lift.ml  main.ml  parser.mly  phases.ml  pretty.ml  regalloc.ml  runner.ml  test.ml  utils.ml  wellformed.ml
snake/a12-final-project/input/: lists.snake  name_stupid.snake  strings.snake
snake/a12-final-project/runtime/: decl.h  gc.c  main.c  snake_string.c  snakeval.c  snakeval.h  ss_bin_tree.c  ss_bin_tree.h  string_span.c  string_span.h
snake/a12-final-project/unittests/: CMakeLists.txt  ss_bin_tree_test.cpp  string_span_test.cpp  test_util.hpp
(+294 files in other folders)
